--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,12 @@
             <artifactId>kumuluzee-discovery-consul</artifactId>
             <version>${kumuluzee-discovery.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.kumuluz.ee.metrics</groupId>
+            <artifactId>kumuluzee-metrics-core</artifactId>
+            <version>${kumuluzee-discovery.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
